src/solver/tests/logical_solver/puzzles/snapshots/lisudoku_solver__solver__tests__logical_solver__puzzles__classic_9x9__check_classic_9x9_hard_naked_triples_solve.snap
---
source: src/solver/tests/logical_solver/puzzles/classic_9x9.rs
expression: result.steps
snapshot_kind: text
---
- rule: HiddenSingle
  cells:
    - row: 1
      col: 7
    - row: 0
      col: 1
    - row: 2
      col: 3
    - row: 6
      col: 6
  values:
    - 7
  areas:
    - Row: 1
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenSingle
  cells:
    - row: 5
      col: 5
    - row: 3
      col: 2
    - row: 4
      col: 8
  values:
    - 9
  areas:
    - Row: 5
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenSingle
  cells:
    - row: 2
      col: 0
    - row: 1
      col: 3
    - row: 3
      col: 2
    - row: 6
      col: 1
  values:
    - 9
  areas:
    - Column: 0
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenSingle
  cells:
    - row: 1
      col: 1
    - row: 3
      col: 3
    - row: 5
      col: 2
    - row: 6
      col: 0
  values:
    - 6
  areas:
    - Column: 1
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenSingle
  cells:
    - row: 4
      col: 2
    - row: 2
      col: 1
    - row: 7
      col: 0
  values:
    - 2
  areas:
    - Column: 2
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenSingle
  cells:
    - row: 4
      col: 7
    - row: 1
      col: 8
    - row: 5
      col: 4
    - row: 7
      col: 6
  values:
    - 4
  areas:
    - Column: 7
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenSingle
  cells:
    - row: 4
      col: 6
    - row: 6
      col: 0
    - row: 5
      col: 2
    - row: 3
      col: 3
  values:
    - 6
  areas:
    - Row: 4
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenSingle
  cells:
    - row: 8
      col: 2
    - row: 0
      col: 1
    - row: 6
      col: 6
    - row: 7
      col: 5
  values:
    - 7
  areas:
    - Column: 2
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenSingle
  cells:
    - row: 3
      col: 6
    - row: 2
      col: 8
    - row: 5
      col: 3
  values:
    - 5
  areas:
    - Region: 5
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: Candidates
  cells: []
  values: []
  areas: []
  affected_cells: []
  candidates:
    - - []
      - []
      - - 5
        - 1
        - 4
        - 3
      - - 2
        - 1
        - 4
      - - 3
        - 2
        - 1
        - 5
        - 6
      - - 1
        - 2
        - 5
        - 3
        - 4
        - 6
      - - 2
        - 9
        - 3
      - - 2
        - 6
        - 9
      - - 6
        - 2
        - 3
    - - - 1
        - 5
        - 3
      - []
      - - 5
        - 3
        - 1
      - []
      - - 1
        - 2
        - 8
        - 3
        - 5
      - - 1
        - 3
        - 5
        - 2
        - 8
      - - 3
        - 2
        - 8
      - []
      - []
    - - []
      - []
      - - 3
        - 4
      - []
      - - 8
        - 6
        - 3
      - - 6
        - 3
        - 4
        - 8
      - []
      - - 8
        - 6
      - []
    - - - 4
        - 7
        - 1
      - - 1
        - 8
        - 4
      - []
      - []
      - - 1
        - 7
        - 8
        - 2
      - - 8
        - 2
        - 1
      - []
      - []
      - - 8
        - 2
        - 1
        - 7
    - - - 1
        - 3
        - 5
        - 7
      - - 8
        - 3
        - 1
        - 5
      - []
      - - 8
        - 1
      - - 1
        - 8
        - 3
        - 7
      - - 1
        - 8
        - 3
      - []
      - []
      - []
    - - - 7
        - 1
        - 3
      - - 8
        - 1
        - 3
      - []
      - []
      - []
      - []
      - - 8
        - 2
      - - 2
        - 8
      - - 2
        - 1
        - 8
        - 7
    - - []
      - []
      - - 5
        - 1
        - 8
        - 3
        - 4
      - - 4
        - 2
        - 8
        - 1
      - - 2
        - 5
        - 1
        - 8
      - - 4
        - 5
        - 2
        - 8
        - 1
      - []
      - - 2
        - 5
        - 8
      - - 3
        - 8
        - 2
    - - []
      - - 5
        - 8
        - 3
        - 1
      - - 3
        - 1
        - 5
        - 8
      - - 1
        - 8
      - - 8
        - 5
        - 6
        - 9
        - 1
      - []
      - []
      - - 8
        - 5
        - 6
        - 9
      - - 6
        - 8
        - 3
    - - - 5
        - 4
      - - 8
        - 4
        - 5
      - []
      - []
      - - 2
        - 8
        - 9
        - 5
        - 6
      - - 2
        - 6
        - 4
        - 8
        - 5
      - - 9
        - 2
        - 8
      - []
      - - 2
        - 8
        - 6
  invalid_state_reason: ~
- rule: LockedCandidatesPairs
  cells:
    - row: 5
      col: 0
    - row: 5
      col: 1
  values:
    - 3
  areas:
    - Row: 5
    - Region: 3
  affected_cells:
    - row: 4
      col: 0
    - row: 4
      col: 1
  candidates: ~
  invalid_state_reason: ~
- rule: LockedCandidatesPairs
  cells:
    - row: 6
      col: 2
    - row: 7
      col: 2
  values:
    - 8
  areas:
    - Column: 2
    - Region: 6
  affected_cells:
    - row: 7
      col: 1
    - row: 8
      col: 1
  candidates: ~
  invalid_state_reason: ~
- rule: LockedCandidatesPairs
  cells:
    - row: 0
      col: 6
    - row: 1
      col: 6
  values:
    - 3
  areas:
    - Column: 6
    - Region: 2
  affected_cells:
    - row: 0
      col: 8
  candidates: ~
  invalid_state_reason: ~
- rule: LockedCandidatesPairs
  cells:
    - row: 0
      col: 2
    - row: 2
      col: 2
  values:
    - 4
  areas:
    - Region: 0
    - Column: 2
  affected_cells:
    - row: 6
      col: 2
  candidates: ~
  invalid_state_reason: ~
- rule: LockedCandidatesPairs
  cells:
    - row: 6
      col: 3
    - row: 6
      col: 5
  values:
    - 4
  areas:
    - Row: 6
    - Region: 7
  affected_cells:
    - row: 8
      col: 5
  candidates: ~
  invalid_state_reason: ~
- rule: LockedCandidatesPairs
  cells:
    - row: 3
      col: 4
    - row: 3
      col: 5
  values:
    - 2
  areas:
    - Region: 4
    - Row: 3
  affected_cells:
    - row: 3
      col: 8
  candidates: ~
  invalid_state_reason: ~
- rule: NakedPairs
  cells:
    - row: 5
      col: 6
    - row: 5
      col: 7
  values:
    - 2
    - 8
  areas:
    - Row: 5
  affected_cells:
    - row: 5
      col: 1
    - row: 5
      col: 8
  candidates: ~
  invalid_state_reason: ~
- rule: LockedCandidatesPairs
  cells:
    - row: 5
      col: 6
    - row: 5
      col: 7
  values:
    - 8
  areas:
    - Row: 5
    - Region: 5
  affected_cells:
    - row: 3
      col: 8
  candidates: ~
  invalid_state_reason: ~
- rule: NakedPairs
  cells:
    - row: 8
      col: 0
    - row: 8
      col: 1
  values:
    - 4
    - 5
  areas:
    - Row: 8
  affected_cells:
    - row: 8
      col: 4
    - row: 8
      col: 5
  candidates: ~
  invalid_state_reason: ~
- rule: LockedCandidatesPairs
  cells:
    - row: 8
      col: 0
    - row: 8
      col: 1
  values:
    - 5
  areas:
    - Row: 8
    - Region: 6
  affected_cells:
    - row: 6
      col: 2
    - row: 7
      col: 1
    - row: 7
      col: 2
  candidates: ~
  invalid_state_reason: ~
- rule: LockedCandidatesPairs
  cells:
    - row: 0
      col: 2
    - row: 1
      col: 2
  values:
    - 5
  areas:
    - Column: 2
    - Region: 0
  affected_cells:
    - row: 1
      col: 0
  candidates: ~
  invalid_state_reason: ~
- rule: NakedPairs
  cells:
    - row: 5
      col: 1
    - row: 7
      col: 1
  values:
    - 1
    - 3
  areas:
    - Column: 1
  affected_cells:
    - row: 3
      col: 1
    - row: 4
      col: 1
  candidates: ~
  invalid_state_reason: ~
- rule: NakedPairs
  cells:
    - row: 4
      col: 3
    - row: 7
      col: 3
  values:
    - 8
    - 1
  areas:
    - Column: 3
  affected_cells:
    - row: 0
      col: 3
    - row: 6
      col: 3
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenPairs
  cells:
    - row: 7
      col: 4
    - row: 7
      col: 7
  values:
    - 5
    - 9
  areas:
    - Row: 7
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenSingle
  cells:
    - row: 7
      col: 8
  values:
    - 6
  areas:
    - Row: 7
  affected_cells:
    - row: 0
      col: 8
    - row: 8
      col: 8
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 8
  values:
    - 2
  areas: []
  affected_cells:
    - row: 0
      col: 3
    - row: 0
      col: 4
    - row: 0
      col: 5
    - row: 0
      col: 6
    - row: 0
      col: 7
    - row: 6
      col: 8
    - row: 8
      col: 8
    - row: 1
      col: 6
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 3
  values:
    - 4
  areas: []
  affected_cells:
    - row: 0
      col: 2
    - row: 0
      col: 5
    - row: 6
      col: 3
    - row: 2
      col: 5
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 8
      col: 8
  values:
    - 8
  areas: []
  affected_cells:
    - row: 8
      col: 4
    - row: 8
      col: 5
    - row: 8
      col: 6
    - row: 6
      col: 8
    - row: 6
      col: 7
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 6
      col: 3
  values:
    - 2
  areas: []
  affected_cells:
    - row: 6
      col: 4
    - row: 6
      col: 5
    - row: 6
      col: 7
    - row: 8
      col: 4
    - row: 8
      col: 5
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 6
      col: 8
  values:
    - 3
  areas: []
  affected_cells:
    - row: 6
      col: 2
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 6
      col: 7
  values:
    - 5
  areas: []
  affected_cells:
    - row: 6
      col: 4
    - row: 6
      col: 5
    - row: 7
      col: 7
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 8
      col: 5
  values:
    - 6
  areas: []
  affected_cells:
    - row: 8
      col: 4
    - row: 0
      col: 5
    - row: 2
      col: 5
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 7
      col: 7
  values:
    - 9
  areas: []
  affected_cells:
    - row: 7
      col: 4
    - row: 0
      col: 7
    - row: 8
      col: 6
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 8
      col: 4
  values:
    - 9
  areas: []
  affected_cells:
    - row: 8
      col: 6
    - row: 7
      col: 4
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 7
  values:
    - 6
  areas: []
  affected_cells:
    - row: 0
      col: 4
    - row: 2
      col: 7
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 7
      col: 4
  values:
    - 5
  areas: []
  affected_cells:
    - row: 0
      col: 4
    - row: 1
      col: 4
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 8
      col: 6
  values:
    - 2
  areas: []
  affected_cells:
    - row: 5
      col: 6
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 7
  values:
    - 8
  areas: []
  affected_cells:
    - row: 2
      col: 4
    - row: 2
      col: 5
    - row: 5
      col: 7
    - row: 1
      col: 6
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 6
  values:
    - 8
  areas: []
  affected_cells:
    - row: 5
      col: 7
    - row: 1
      col: 6
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 6
  values:
    - 3
  areas: []
  affected_cells:
    - row: 1
      col: 0
    - row: 1
      col: 2
    - row: 1
      col: 4
    - row: 1
      col: 5
    - row: 0
      col: 6
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 5
  values:
    - 3
  areas: []
  affected_cells:
    - row: 2
      col: 2
    - row: 2
      col: 4
    - row: 0
      col: 5
    - row: 1
      col: 5
    - row: 4
      col: 5
    - row: 0
      col: 4
    - row: 1
      col: 4
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 7
  values:
    - 2
  areas: []
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 4
  values:
    - 1
  areas: []
  affected_cells:
    - row: 0
      col: 2
    - row: 0
      col: 5
    - row: 1
      col: 4
    - row: 3
      col: 4
    - row: 4
      col: 4
    - row: 6
      col: 4
    - row: 1
      col: 5
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 6
  values:
    - 9
  areas: []
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 0
  values:
    - 1
  areas: []
  affected_cells:
    - row: 1
      col: 2
    - row: 1
      col: 4
    - row: 1
      col: 5
    - row: 3
      col: 0
    - row: 4
      col: 0
    - row: 5
      col: 0
    - row: 0
      col: 2
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 2
  values:
    - 4
  areas: []
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 4
  values:
    - 6
  areas: []
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 5
  values:
    - 5
  areas: []
  affected_cells:
    - row: 0
      col: 2
    - row: 1
      col: 5
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 2
  values:
    - 5
  areas: []
  affected_cells:
    - row: 1
      col: 5
    - row: 0
      col: 2
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 6
      col: 4
  values:
    - 8
  areas: []
  affected_cells:
    - row: 6
      col: 2
    - row: 6
      col: 5
    - row: 1
      col: 4
    - row: 3
      col: 4
    - row: 4
      col: 4
    - row: 7
      col: 3
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 2
  values:
    - 3
  areas: []
  affected_cells:
    - row: 7
      col: 2
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 4
  values:
    - 2
  areas: []
  affected_cells:
    - row: 1
      col: 5
    - row: 3
      col: 4
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 6
      col: 2
  values:
    - 1
  areas: []
  affected_cells:
    - row: 6
      col: 5
    - row: 7
      col: 2
    - row: 7
      col: 1
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 7
      col: 3
  values:
    - 1
  areas: []
  affected_cells:
    - row: 7
      col: 1
    - row: 7
      col: 2
    - row: 4
      col: 3
    - row: 6
      col: 5
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 5
  values:
    - 8
  areas: []
  affected_cells:
    - row: 3
      col: 5
    - row: 4
      col: 5
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 4
  values:
    - 7
  areas: []
  affected_cells:
    - row: 3
      col: 0
    - row: 3
      col: 8
    - row: 4
      col: 4
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 3
  values:
    - 8
  areas: []
  affected_cells:
    - row: 4
      col: 1
    - row: 4
      col: 5
    - row: 3
      col: 5
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 6
      col: 5
  values:
    - 4
  areas: []
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 7
      col: 1
  values:
    - 3
  areas: []
  affected_cells:
    - row: 5
      col: 1
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 7
      col: 2
  values:
    - 8
  areas: []
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 0
  values:
    - 4
  areas: []
  affected_cells:
    - row: 3
      col: 1
    - row: 8
      col: 0
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 8
  values:
    - 1
  areas: []
  affected_cells:
    - row: 3
      col: 5
    - row: 5
      col: 8
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 1
  values:
    - 5
  areas: []
  affected_cells:
    - row: 4
      col: 0
    - row: 8
      col: 1
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 4
  values:
    - 3
  areas: []
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 5
  values:
    - 1
  areas: []
  affected_cells:
    - row: 3
      col: 5
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 1
  values:
    - 1
  areas: []
  affected_cells:
    - row: 5
      col: 8
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 1
  values:
    - 8
  areas: []
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 5
  values:
    - 2
  areas: []
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 0
  values:
    - 7
  areas: []
  affected_cells:
    - row: 5
      col: 0
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 8
  values:
    - 7
  areas: []
  affected_cells:
    - row: 5
      col: 0
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 8
      col: 0
  values:
    - 5
  areas: []
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 8
      col: 1
  values:
    - 4
  areas: []
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 0
  values:
    - 3
  areas: []
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
